--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,16 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: var(--dark-blue);
+
   transition: all 0.7s;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  color: var(--dark-blue);
 }
 
 ul li {
@@ -33,6 +41,7 @@ ul li a {
   font-size: 3rem;
   z-index: 10;
   transition: 0.3s;
+  border: 1px solid rgba(200, 200, 200, 0.5);
 }
 
 .scrollup:hover {
@@ -41,4 +50,101 @@ ul li a {
 }
 .show-scroll {
   bottom: 7rem;
+}
+
+/* DROPDOWN STYLES */
+
+.Dropdown-root {
+  position: relative;
+  width: 100%;
+}
+
+.Dropdown-control {
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  box-sizing: border-box;
+  color: #333;
+  cursor: default;
+  outline: none;
+  padding: 8px 52px 8px 10px;
+  transition: all 200ms ease;
+}
+
+.Dropdown-control:hover {
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+}
+
+.Dropdown-arrow {
+  border-color: #999 transparent transparent;
+  border-style: solid;
+  border-width: 5px 5px 0;
+  content: " ";
+  display: block;
+  height: 0;
+  margin-top: -ceil(2.5);
+  position: absolute;
+  right: 10px;
+  top: 18px;
+  width: 0;
+}
+
+.is-open .Dropdown-arrow {
+  border-color: transparent transparent #999;
+  border-width: 0 5px 5px;
+}
+
+.Dropdown-menu {
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  margin-top: -1px;
+  max-height: 200px;
+  overflow-y: auto;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  z-index: 1000;
+  -webkit-overflow-scrolling: touch;
+}
+
+.Dropdown-menu .Dropdown-group > .Dropdown-title {
+  padding: 8px 10px;
+  color: rgba(51, 51, 51, 1);
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.Dropdown-option {
+  box-sizing: border-box;
+  color: rgba(51, 51, 51, 0.8);
+  cursor: pointer;
+  display: block;
+  padding: 8px 10px;
+}
+
+.Dropdown-option:last-child {
+  border-bottom-right-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.Dropdown-option:hover {
+  background-color: var(--blue);
+  color: white;
+}
+
+.Dropdown-option.is-selected {
+  background-color: var(--dark-blue);
+  color: white;
+}
+
+.Dropdown-noresults {
+  box-sizing: border-box;
+  color: #ccc;
+  cursor: default;
+  display: block;
+  padding: 8px 10px;
 }
