--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -6,9 +6,9 @@
   width: 100%;
   padding: 30px 60px;
   background: linear-gradient(
-    300deg,
-    rgba(9, 170, 232, 0.5),
-    rgba(27, 8, 62, 0.6)
+    310deg,
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.8)
   );
   height: 100%;
   min-height: 500px;
@@ -38,18 +38,18 @@
 
 .list-item a {
   padding: 4px 4px;
-  color: white;
+  color: var(--dark-blue);
   font-size: 20px;
+  font-weight: 700;
   border-radius: 10px;
   transition: 0.3s;
   transition: 0.7s;
 }
 .list-item a:hover {
-  color: white;
-  font-weight: 600;
+  font-weight: 700;
 }
 .list-item:hover {
-  background-color: var(--blue);
+  background-color: white;
   transform: translateY(-5px);
 }
 
@@ -218,7 +218,7 @@
     cursor: pointer;
     font-size: 29px;
     position: absolute;
-    color: white;
+    color: var(--dark-blue);
     top: 24px;
     right: 16px;
   }
