--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -2,16 +2,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
   padding: 30px 60px;
-  background: linear-gradient(
-    310deg,
-    rgba(255, 255, 255, 0.4),
-    rgba(255, 255, 255, 0.8)
-  );
   height: 100%;
-  min-height: 500px;
 }
 
 .logocemic {
@@ -62,6 +56,22 @@
   background-position-x: center;
   position: relative;
 }
+.bannerback {
+  background-color: rgba(200, 200, 200, 0.8);
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image-banner {
+  border-radius: 8px;
+  height: 100%;
+  width: 100%;
+  max-width: 2000px;
+  background-color: rgba(200, 200, 200, 0.5);
+}
 /*  */
 
 .about {
@@ -87,19 +97,13 @@
 .about .about-container p {
   margin: 16px;
   font-size: 1.1rem;
-  width: 50%;
+  width: 100%;
 }
 @media screen and (min-width: 1300px) {
   .about .about-container p {
     font-size: 1.5rem;
   }
 }
-.about-icon {
-  background-repeat: no-repeat;
-  width: 40%;
-  height: 100%;
-}
-
 .contact {
   background: linear-gradient(300deg, var(--blue), var(--dark-blue));
   padding: 30px 60px;
@@ -201,6 +205,17 @@
 }
 
 /* RESPONSIBLE WEBSITE */
+@media screen and (max-width: 1240px) {
+  .banner {
+    min-height: 320px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .banner {
+    min-height: 280px;
+  }
+}
 
 @media screen and (max-width: 760px) {
   .header-container {
@@ -259,9 +274,9 @@
 
   /* BANNER SECTION */
   .banner {
-    height: 400px;
-    position: relative;
+    min-height: 200px;
   }
+
   /*  */
 
   .about {
@@ -281,10 +296,7 @@
   .about .about-container p {
     margin: 16px;
     font-size: 0.9rem;
-    width: 85%;
-  }
-  .about .about-icon {
-    font-size: 3rem;
+    width: 100%;
   }
 
   .contact {
