--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
-  transition: all 0.7s;
+  transition: all 1s;
 }
 
 html {
@@ -31,6 +30,9 @@ ul li {
 }
 ul li a {
   text-decoration: none;
+}
+section {
+  transition: 4s;
 }
 
 section h1 {
