--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -268,6 +268,20 @@
   height: 64px;
   background-size: 100% 100%;
   background-image: url("/images/arrow.png");
+  animation-name: seta;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+@keyframes seta {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .icon-menu {
@@ -354,6 +368,23 @@
   /* BANNER SECTION */
   .banner {
     min-height: 200px;
+  }
+  .bannerback {
+    background-color: rgba(200, 200, 200, 0.8);
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .image-banner {
+    border-radius: 8px;
+    height: 100%;
+    width: 100%;
+    max-width: 2000px;
+    background-color: rgba(200, 200, 200, 0.5);
   }
 
   /*  */
@@ -475,8 +506,24 @@
 }
 @media screen and (max-width: 500px) {
   .banner {
-    height: 250px;
-    position: relative;
+    min-height: 200px;
+  }
+  .bannerback {
+    background-color: rgba(200, 200, 200, 0.8);
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .image-banner {
+    border-radius: 8px;
+    height: 100%;
+    width: 100%;
+    max-width: 2000px;
+    background-color: rgba(200, 200, 200, 0.5);
   }
   .about-container p {
     font-size: 0.6rem;
