--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  transition: all 1s;
+  /* transition: all 1s; */
+}
+
+body {
+  overflow-x: hidden;
 }
 
 html {
@@ -32,7 +36,7 @@ ul li a {
   text-decoration: none;
 }
 section {
-  transition: 1.5s;
+  transition: 1s;
 }
 
 section h1 {
