--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -1,6 +1,6 @@
 .cemic-logo {
   height: 3rem;
-  margin: 8px 0 0 50px;
+  margin: 8px 0 0 8px;
   /* background-color: white; */
   padding: 2px;
   border-radius: 4px;
@@ -27,10 +27,10 @@
 }
 .navigation ul li {
   position: relative;
-  width: 200%;
+  width: 100%;
   list-style: none;
   cursor: pointer;
-  transition: 0.5s;
+  /* transition: 0.5s; */
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
@@ -47,6 +47,7 @@
   display: flex;
   text-decoration: none;
   color: white;
+  /* transition: 0.5s; */
 }
 .navigation ul li:hover a {
   color: var(--blue);
@@ -70,4 +71,26 @@
   line-height: 60px;
   text-align: start;
   white-space: nowrap;
+}
+.rounded-top {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 35px 35px 0 10px white;
+  pointer-events: none;
+}
+.rounded-bottom {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 35px -35px 0 10px white;
+  pointer-events: none;
 }
