--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -1,10 +1,10 @@
 .cemic-logo {
-  height: 3rem;
-  margin: 8px 0 0 8px;
-  /* background-color: white; */
+  height: 60px;
+  width: 60px;
   padding: 2px;
-  border-radius: 4px;
 }
+
+/* SIDEBAR NAVIGATION STYLES */
 
 .container {
   position: relative;
@@ -14,10 +14,10 @@
   position: fixed;
   width: 300px;
   height: 100vh;
-  background-color: var(--blue);
-  border-left: 10px solid var(--blue);
-
+  transition: 0.5s;
   overflow: hidden;
+  background-color: #003147;
+  border-right: 4px solid var(--dark-blue);
 }
 .navigation ul {
   position: absolute;
@@ -30,16 +30,17 @@
   width: 100%;
   list-style: none;
   cursor: pointer;
-  /* transition: 0.5s; */
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
 }
 .navigation ul li:hover {
-  background: white;
+  background: linear-gradient(300deg, #003147, #09aae8);
 }
 .navigation ul li:nth-child(1) {
   margin-bottom: 40px;
   pointer-events: none;
+}
+.navigation ul li:nth-child(1) a {
+  font-weight: 700;
+  font-size: 20px;
 }
 .navigation ul li a {
   position: relative;
@@ -47,10 +48,6 @@
   display: flex;
   text-decoration: none;
   color: white;
-  /* transition: 0.5s; */
-}
-.navigation ul li:hover a {
-  color: var(--blue);
 }
 .navigation ul li a .icon {
   position: relative;
@@ -69,28 +66,36 @@
   padding: 0 10px;
   height: 60px;
   line-height: 60px;
-  text-align: start;
+
   white-space: nowrap;
 }
-.rounded-top {
-  content: "";
+
+/* MAIN STYLES */
+
+.main {
   position: absolute;
-  right: 0;
-  top: -50px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: 35px 35px 0 10px white;
-  pointer-events: none;
+  width: calc(100% - 300px);
+  left: 300px;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+  transition: 0.5s;
 }
-.rounded-bottom {
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: -50px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: 35px -35px 0 10px white;
-  pointer-events: none;
+.main .topbar {
+  width: 100%;
+  background: #fff;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main .topbar .toggle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+.toggle .icon {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
 }
