update admin side with client page and professional page

--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -57,6 +57,93 @@
   background-color: white;
 }
 
+.reset-password h3 {
+  text-align: center;
+  font-weight: 500;
+}
+.reset-password .input-box {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  color: var(--dark-blue);
+  margin: 50px 0 10px 0;
+}
+.reset-password .input-box .text-input {
+  pointer-events: none;
+  position: absolute;
+  color: var(--dark-blue);
+  font-weight: 700;
+  line-height: 40px;
+  font-size: 18px;
+  padding: 0 10px;
+  display: block;
+  transition: 0.3s;
+  top: 0;
+  left: 0;
+}
+.reset-password .input-box input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  box-shadow: none;
+  padding: 0 10px;
+  color: white;
+  font-weight: 500;
+  z-index: 1;
+}
+.reset-password input:focus + .text-input,
+.reset-password input:valid + .text-input {
+  top: -35px;
+  left: -10px;
+}
+
+.reset-password .input-box .line {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: var(--dark-blue);
+  transition: 0.3s;
+  border-radius: 4px;
+  pointer-events: none;
+}
+
+.reset-password .input-box input:focus ~ .line,
+.reset-password .input-box input:valid ~ .line {
+  height: 100%;
+}
+
+.reset-password .submit-container input[type="submit"] {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 4px 8px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  transition: 0.3s;
+  background-color: var(--dark-blue);
+  cursor: pointer;
+  margin: 0 auto;
+}
+.reset-password .submit-container input[type="submit"]:hover {
+  color: white;
+  background: linear-gradient(
+    300deg,
+    var(--dark-blue) 0%,
+    rgb(33, 20, 60) 100%
+  );
+}
+.reset-password .submit-container input[type="submit"]:active {
+  background: white;
+  color: var(--dark-blue);
+}
+
 /* AUTHENTICATION STYLES */
 
 .container {
@@ -255,6 +342,18 @@
   height: 100%;
 }
 
+.icon-eye {
+  position: absolute;
+  color: var(--dark-blue);
+  font-size: 25px;
+  z-index: 100;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  width: fit-content;
+}
+
 .login-form h3 {
   color: white;
   font-weight: 400;
@@ -315,10 +414,16 @@
   .left-side {
     width: 100%;
   }
+  .modal {
+    width: 65%;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .login-form .row100 {
+    width: 80%;
+  }
+  .modal {
     width: 80%;
   }
 }
@@ -343,5 +448,8 @@
   }
   .terms-policy {
     margin: 10px 0;
+  }
+  .modal {
+    width: 95%;
   }
 }
