--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -140,6 +140,7 @@
 }
 .pix p {
   font-size: 0.9rem;
+  padding-bottom: 24px;
 }
 #contact {
   opacity: 0;
@@ -193,6 +194,9 @@
   font-size: 1.2rem;
   font-weight: 500;
 }
+.contact .contact-container {
+  width: 100%;
+}
 .contact form {
   width: 100%;
   display: flex;
@@ -201,72 +205,120 @@
   justify-content: center;
 }
 .contact form input {
-  width: 100%;
+  width: 60%;
   border-radius: 16px;
   outline: none;
   border: 0;
   height: 40px;
   padding: 0 12px;
   font-size: 18px;
+  transition: 0.4s;
+}
+.contact form input:hover {
+  border: 2px solid var(--dark-blue);
+  outline: none;
 }
 .contact form input:focus {
   border: 1px solid var(--dark-blue);
 }
 .contact form input[type="submit"] {
   margin: 16px 0;
-  width: 70%;
+  width: 30%;
   cursor: pointer;
   background-color: var(--dark-blue);
   color: white;
   font-weight: 700;
+  transition: 0.2s;
 }
-.contact textarea {
-  width: 100%;
-  resize: none;
-  height: 150px;
-  border-radius: 20px;
-  outline: none;
-  border: none;
-  padding: 16px;
-  font-weight: 500;
-  font-size: 16px;
-}
-.contact textarea:focus {
-  border: 1px solid var(--dark-blue);
+.contact form input[type="submit"]:hover {
+  opacity: 0.8;
 }
 
 .footer {
-  background-color: white;
+  background-color: rgba(40, 40, 40, 1);
 }
 .footer h3 {
   text-align: center;
+  color: white;
 }
 .container-footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  padding: 24px 0;
+}
+.container-footer .left-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+.container-footer .left-footer .logo-footer {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+}
+.container-footer .right-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 24px 0;
+  width: 100%;
 }
-.footer .logo-footer {
+.container-footer .right-footer .socials {
+  display: flex;
+  align-items: center;
+}
+.container-footer .right-footer .socials .social-item {
   width: 50px;
   height: 50px;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: 0.2s;
+  text-decoration: none;
+  color: black;
+  margin-top: 5px;
+}
+.container-footer .right-footer .socials .social-item:hover {
+  color: white;
+  transform: translateY(-7px);
 }
 .footer p {
   margin: 8px 0;
   font-size: 1.2rem;
   text-align: center;
+  color: white;
 }
-.footer a {
+.pos-footer {
+  width: 100%;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  margin: 0 auto;
+  border-radius: 50px;
+  padding-bottom: 24px;
+}
+.pos-footer a {
   text-align: center;
   text-decoration: none;
-  color: var(--dark-blue);
+  color: white;
   font-size: 20px;
   font-style: italic;
   font-weight: 500;
+  transition: 0.2s;
 }
-.footer .sofx-logo {
-  height: 20px;
+.pos-footer a:hover {
+  font-size: 22px;
+}
+.pos-footer .sofx-logo {
+  height: 18px;
+  margin-left: 2px;
+  border-radius: 4px;
 }
 
 .icone-seta {
@@ -431,6 +483,7 @@
   }
   .pix p {
     font-size: 0.7rem;
+    padding-bottom: 16px;
   }
 
   .contact {
@@ -496,23 +549,9 @@
     font-size: 18px;
   }
 
-  .footer {
-    background-color: rgba(200, 200, 200, 0.2);
-  }
   .container-footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 24px 0;
-  }
-  .footer .logo-footer {
-    width: 40px;
-    height: 40px;
-  }
-  .footer p {
-    margin: 8px 0;
-    font-size: 1.2rem;
   }
 }
 @media screen and (max-width: 500px) {
@@ -547,6 +586,7 @@
   }
   .pix p {
     font-size: 0.5rem;
+    padding-bottom: 12px;
   }
   .icone-seta {
     width: 30px;
