new admin page and authentication pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,7 +102,7 @@ section h1 img {
   bottom: -30%;
   box-shadow: 0 8px 12px hsla(228, 66%, 45%, 0.1);
   display: inline-flex;
-  background-color: white;
+  background-color: #34af23;
   padding: 0.7rem;
   border-radius: 50%;
   font-size: 3rem;
